--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "common:prepare": "husky install"
   },
   "dependencies": {
+    "@logto/vue": "^1.1.1",
     "@traptitech/markdown-it-katex": "^3.6.0",
     "@vueuse/core": "^9.13.0",
     "highlight.js": "^11.7.0",
